# Axiom

./: worklog.md
axiom/: Cargo.toml  worklog.md
axiom/axiom-aarch64/: Cargo.toml
axiom/axiom-aarch64/src/: lib.rs
axiom/axiom-autotune/: Cargo.toml
axiom/axiom-autotune/src/: lib.rs
axiom/axiom-bench/: Cargo.toml  main.rs
axiom/axiom-block-layout/: Cargo.toml
axiom/axiom-block-layout/src/: lib.rs
axiom/axiom-codegen/: Cargo.toml
axiom/axiom-codegen/src/: lib.rs
axiom/axiom-driver/: Cargo.toml
axiom/axiom-driver/src/: lib.rs
axiom/axiom-ir/: Cargo.toml
axiom/axiom-ir/src/: builder.rs  graph.rs  lib.rs  nodes.rs  operators.rs  vector.rs
axiom/axiom-legalize/: Cargo.toml
axiom/axiom-legalize/src/: lib.rs
axiom/axiom-lto/: Cargo.toml
axiom/axiom-lto/src/: lib.rs
axiom/axiom-mir/: Cargo.toml
axiom/axiom-mir/src/: lib.rs  lower.rs
axiom/axiom-opt/: Cargo.toml
axiom/axiom-opt/src/: constant_fold.rs  cse.rs  dce.rs  dse.rs  escape_analysis.rs  inline.rs  lib.rs  licm.rs  loop_vectorize.rs  schedule.rs  slp.rs  speculative_devirt.rs  strength_reduce.rs  tail_call.rs
axiom/axiom-ownership/: Cargo.toml
axiom/axiom-ownership/src/: lib.rs
axiom/axiom-regalloc/: Cargo.toml
axiom/axiom-regalloc/src/: graph_coloring.rs  lib.rs
axiom/axiom-riscv/: Cargo.toml
axiom/axiom-riscv/src/: lib.rs
axiom/axiom-span/: Cargo.toml
axiom/axiom-span/src/: lib.rs
axiom/axiom-target/: Cargo.toml
axiom/axiom-target/src/: lib.rs
axiom/axiom-wasm/: Cargo.toml
axiom/axiom-wasm/src/: lib.rs
axiom/axiom-x86/: Cargo.toml
axiom/axiom-x86/src/: lib.rs
download/: axiom_vs_gcc_O3_benchmark.txt  simd_bench.cpp  simd_bench_analysis.txt  simd_compute_bench.cpp
